--- a/package.json
+++ b/package.json
@@ -22,5 +22,10 @@
     "astro-seo": "^0.6.0",
     "tailwindcss": "^3.0.24",
     "vue": "^3.2.30"
+  },
+  "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/line-clamp": "^0.4.2",
+    "@tailwindcss/typography": "^0.5.7"
   }
 }
